--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <html>
 
       <head>
-        <h2>URN 12345678 </h2>
+    
       </head>
+    <img src = "Capture.PNG" alt="Banner" width="1200" height="300"
     
   </html>
