--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     
       </head>
     <img src = "Capture.PNG" alt="Banner" width="1200" height="300"
-    
+    <h1><b>ENG0018 Computer laboratory 2023/24 </b></h1>
+    <h2>Student URN 123456789</h2>
   </html>
