--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
   <!Doctype html>
 
-  <html>
 
-      <head>
-    
-      </head>
+  <html>
+      <head> 
     <img src = "Capture.PNG" alt="Banner" width="1200" height="300"
     <h1><b>ENG0018 Computer laboratory 2023/24 </b></h1>
     <h2>Student URN 123456789</h2>
-  </html>
+    <hr>
+     <h2 style=”fontfamily:calibri:”><b>Conference paper: Bridge Deck Repairs</b></h2>.
+    <hr>
+
