--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <html>
       <head> 
     <img src = "Capture.PNG" alt="Banner" width="1200" height="300"
+    <hr>
     <h1><b>ENG0018 Computer laboratory 2023/24 </b></h1>
     <h2>Student URN 123456789</h2>
     <hr>
@@ -46,5 +47,7 @@
     <style>
       .mySlides {display:none;}
     </style>
+
+    <body style="background-color:#FFFFFF;margin-left:50px;">
     
     
