--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
     <style>
         /* Style for tables */
         table {
@@ -30,17 +35,8 @@
     <h1><b>ENG0018 Computer laboratory 2023/24 </b></h1>
     <h2>Student URN 123456789</h2>
     <hr>
-    <h2 style="font-family: calibri;"><b>Conference paper: Transmission line speakers</b></h2>
+    <h2 style="font-family: calibri;"><b>Conference paper: Bridge Deck Repairs</b></h2>
     <hr>
-
-    <h4 id="Abstract">Abstract</h3>
-    <p class="ex1">
-        <pre>
-            this is a test 
-        </pre>
-    </p>
-
-    <h4 id="Analysis and Discussion">Analysis and Discussion</h4>
 
     <!-- Table of contents -->
     <table>
@@ -60,6 +56,17 @@
             <td><a href="#References">References</a></td>
         </tr>
     </table>
+
+    <hr>
+    <h3 id="Abstract">Abstract</h3>
+    <p class="ex1">
+        <pre>
+            this is a test 
+        </pre>
+    </p>
+
+    <h3 id="Analysis and Discussion">Analysis and Discussion</h3>
+
 </body>
 </html>
 
