--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
     </style>
 </head>
-<body style="background-color: #FFFFFF; margin-left: 50px;">
+<body style="background-color: #40E0D0; margin-left: 50px;">
 
     <img src="Capture.PNG" alt="Banner" width="1200" height="300">
     <hr>
