--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
         p.ex1 {
             margin-left: 250px;
         }
+
+        /* Style for table of contents links */
+        table a {
+            color: #29c5f6;
+            text-decoration: none;
+        }
+
+        table a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
-<body style="background-color: #40E0D0; margin-left: 50px;">
+<body style="background-color: #FFFFFF; margin-left: 50px;">
 
     <img src="Capture.PNG" alt="Banner" width="1200" height="300">
     <hr>
