--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         table a:hover {
             text-decoration: underline;
         }
+
+        /* Style for table of contents background */
+        th, td {
+            background-color: #29c5f6;
+        }
     </style>
 </head>
 <body style="background-color: #FFFFFF; margin-left: 50px;">
@@ -79,7 +84,6 @@
 
 </body>
 </html>
-
 
     
 
