--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         /* Style for table of contents background */
         th, td {
-            background-color: #29c5f6;
+            background-color: #5579C6;
         }
     </style>
 </head>
