--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         /* Style for table of contents links */
         table a {
-            color: #29c5f6;
+            color: #000000;
             text-decoration: none;
         }
 
