--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
     <h3 id="Abstract">Abstract</h3>
     <p class="ex1">
         <pre>
-            Most speakers used today in your house, cinemas, lecture theatres and nightclubs use simple designs where a speaker driver is mounted in a sealed box or with basic ports at the back of the cabinet, I will be discussing a special type of speaker called Transmission lines. These recycle the sound energy from the rear-facing side of the speaker and direct it along a long (normally folded) pathway in the speaker enclosure thus changing the path difference of the sound waves (this is the difference in the distance a wave travels to a point compared to another). When tuned, it allows for a much better control of the energy produced by the speaker and improves the fidelity of the sound or more specifically the bass frequency responsiveness (how well a speaker reproduces bass frequencies).
+            Most speakers used today in your house, cinemas, lecture theatres and nightclubs use simple designs where a speaker driver is mounted in a sealed box
+            or with basic ports at the back of the cabinet, I will be discussing a special type of speaker called Transmission lines. These recycle the sound energy
+            from the rear-facing side of the speaker and direct it along a long (normally folded) pathway in the speaker enclosure thus changing the path difference
+            of the sound waves (this is the difference in the distance a wave travels to a point compared to another). When tuned, it allows for a much better control
+            of the energy produced by the speaker and improves the fidelity of the sound or more specifically the bass frequency responsiveness (how well a speaker
+            reproduces bass frequencies).
         </pre>
     </p>
 
