--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px; /* Add some margin to the body */
+        }
+
         /* Style for tables */
         table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
             width: 30%;
+            margin-top: 10px; /* Add margin to the table */
         }
 
         td, th {
@@ -24,12 +30,12 @@
         }
 
         p.ex1 {
-            margin-left: 250px;
+            margin-left: 50px; /* Adjusted the margin for better fit */
         }
 
         /* Style for table of contents links */
         table a {
-            color: #000000;
+            color: #29c5f6;
             text-decoration: none;
         }
 
@@ -39,13 +45,23 @@
 
         /* Style for table of contents background */
         th, td {
-            background-color: #5579C6;
+            background-color: #29c5f6;
+            color: white; /* Adjusted text color for better contrast */
+        }
+
+        img {
+            max-width: 100%; /* Ensure the image does not exceed its container */
+            height: auto;
+        }
+
+        h1, h2, h3 {
+            margin-bottom: 5px; /* Adjusted heading margins for better spacing */
         }
     </style>
 </head>
-<body style="background-color: #FFFFFF; margin-left: 50px;">
+<body style="background-color: #FFFFFF;">
 
-    <img src="Capture.PNG" alt="Banner" width="1200" height="300">
+    <img src="Capture.PNG" alt="Banner">
     <hr>
     <h1><b>ENG0018 Computer laboratory 2023/24 </b></h1>
     <h2>Student URN 123456789</h2>
@@ -76,12 +92,7 @@
     <h3 id="Abstract">Abstract</h3>
     <p class="ex1">
         <pre>
-            Most speakers used today in your house, cinemas, lecture theatres and nightclubs use simple designs where a speaker driver is mounted
-            in a sealed box or with basic ports at the back of the cabinet. What I will be discussing is a special type of speaker called Transmission
-            lines. These recycle the sound energy from the rear-facing side of the speaker and direct it along a long (normally folded) pathway in
-            the speaker enclosure thus changing the path difference of the sound waves (this is the difference in the distance a wave travels to a point
-            compared to another). When tuned, it allows for a much better control of the energy produced by the speaker and improves the fidelity of 
-            the sound or more specifically the bass frequency responsiveness (how well a speaker reproduces bass frequencies).
+            Most speakers used today in your house, cinemas, lecture theatres and night clubs use simple designs where a speaker driver is mounted in a sealed box or with basic ports at the back of the cabinet. What I will be discussing a special type of speaker called Transmission lines. These recycle the sound energy from the rear facing side of the speaker and direct it along a long (normally folded) pathway in the speaker enclosure thus changing the path difference of the sound waves (this is difference in distance a wave travels to a point compared to another). When tuned allows for a much better control of the energy produced by the speaker and improving the fidelity of the sound or more specifically the bass frequency responsiveness (how well a speaker reproduces bass frequencies).
         </pre>
     </p>
 
