--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         /* Style for table of contents links */
         table a {
-            color: #29c5f6;
+            color: #000000;
             text-decoration: none;
         }
 
@@ -45,7 +45,7 @@
 
         /* Style for table of contents background */
         th, td {
-            background-color: #29c5f6;
+            background-color: #5579C6;
             color: white; /* Adjusted text color for better contrast */
         }
 
@@ -92,7 +92,12 @@
     <h3 id="Abstract">Abstract</h3>
     <p class="ex1">
         <pre>
-            Most speakers used today in your house, cinemas, lecture theatres and night clubs use simple designs where a speaker driver is mounted in a sealed box or with basic ports at the back of the cabinet. What I will be discussing a special type of speaker called Transmission lines. These recycle the sound energy from the rear facing side of the speaker and direct it along a long (normally folded) pathway in the speaker enclosure thus changing the path difference of the sound waves (this is difference in distance a wave travels to a point compared to another). When tuned allows for a much better control of the energy produced by the speaker and improving the fidelity of the sound or more specifically the bass frequency responsiveness (how well a speaker reproduces bass frequencies).
+            Most speakers used today in your house, cinemas, lecture theatres and nightclubs use simple designs where a speaker driver is mounted
+            in a sealed box or with basic ports at the back of the cabinet. What I will be discussing is a special type of speaker called Transmission
+            lines. These recycle the sound energy from the rear-facing side of the speaker and direct it along a long (normally folded) pathway in
+             the speaker enclosure thus changing the path difference of the sound waves (this is the difference in distance a wave travels to a point 
+            compared to another). When tuned, it allows for a much better control of the energy produced by the speaker and improves the fidelity of
+            the sound or more specifically the bass frequency responsiveness (how well a speaker reproduces bass frequencies).
         </pre>
     </p>
 
