--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </pre>
     </p>
         <!-- Image under Introduction -->
-    <img src="your_image.jpg" alt="Introduction Image">
+    <img src="acoustic waveguide.png" alt="Introduction Image">
 
 </body>
 </html>
