--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </pre>
     </p>
         <!-- Image under Introduction -->
-    <img src="acoustic waveguide.png" alt="Introduction Image">
+    <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 300px;">
 
 </body>
 </html>
