--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     </p>
         <!-- Image under Introduction -->
     <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 300px;">
+    <figcaption>Figure 1: Your Image Caption</figcaption>
 
 </body>
 </html>
