--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
     </p>
         <!-- Image under Introduction -->
     <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 1000px;">
-    <figcaption>Figure 1: the transmission of waves through a wave guide. 
-        Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.</figcaption>
+    <figcaption>Figure 1: the transmission of waves through a waveguide. 
+        Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.
+    </figcaption>
 
 </body>
 </html>
