--- a/index.html
+++ b/index.html
@@ -114,9 +114,15 @@
     </p>
         <!-- Image under Introduction -->
     <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 1000px;">
-    <figcaption>Figure 1: the transmission of waves through a waveguide. 
-        Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.
+    <figcaption>Figure 1: the transmission of waves through a waveguide. Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.
     </figcaption>
+    <p>
+    The main problem with transmission line speakers is the complex design. For manufactures to produce a high-performance 
+        speaker, it takes careful consideration of the dimensions shape and dampening materials used. However, this may be seen as
+        worth doing for the increase in bass response and higher efficiency due to a larger amount of electrical power being converted into sound.
+
+        
+    </p>
 
 </body>
 </html>
