--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <td><a href="#Introduction">Introduction</a></td>
         </tr>
         <tr>
-            <td><a href="#Analysis and Discussion">Analysis and Discussion</a></td>
+            <td><a href="#Extended Bass Response">=ExtendedBassResponse</a></td>
         </tr>
         <tr>
             <td><a href="#References">References</a></td>
@@ -122,10 +122,19 @@
         <pre>
             The main problem with transmission line speakers is the complex design. For manufacturers to produce a high-performance 
             speaker, it takes careful consideration of the dimensions shape and dampening materials used. However, this may be seen as
-            worth doing for the increase in bass response and higher efficiency due to a larger amount of electrical power being converted into sound.
+            worth doing for the increase in bass response and higher efficiency due to a larger amount of electrical power being 
+            converted into sound.
         </pre>
     </p>
-  
+  <h4 id="Extended Bass Response">ExtendedBassResponse</h4>
+    <p class="exe4">
+        <pre>
+            The idea of this design is that a normal bass driver/ speaker can produce frequencies which before would have been covered
+            by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz). This is done by delaying the
+                sound produced out the rear side of the driver and porting it out of the speaker enclosure when the wave is in phase 
+                with the front wave. 
+        </pre>
+    </p>
 </body>
 </html>
     
