--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
         </pre>
     </p>
   <h4 id="Extended Bass Response">ExtendedBassResponse</h4>
-    <p class="exe4">
+    <p class="ex4">
         <pre>
             The idea of this design is that a normal bass driver/ speaker can produce frequencies which before would have been covered
             by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz). This is done by delaying the
-                sound produced out the rear side of the driver and porting it out of the speaker enclosure when the wave is in phase 
-                with the front wave. 
+            sound produced out the rear side of the driver and porting it out of the speaker enclosure when the wave is in phase 
+            with the front wave. 
         </pre>
     </p>
 </body>
