--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <td><a href="#Introduction">Introduction</a></td>
         </tr>
         <tr>
-            <td><a href="#Extended Bass Response">=ExtendedBassResponse</a></td>
+            <td><a href="#Extended Bass Response">ExtendedBassResponse</a></td>
         </tr>
         <tr>
             <td><a href="#References">References</a></td>
