--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <td><a href="#Extended Bass Response">ExtendedBassResponse</a></td>
         </tr>
         <tr>
-            <td><a href="#References">References</a></td>
+            <td><a href="#Materials Used">MaterialsUsed</a></td>
         </tr>
     </table>
 
@@ -133,6 +133,21 @@
         by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz). This is done by delaying the
         sound produced out the rear side of the driver and porting it out of the speaker enclosure when the wave is in phase 
         with the front wave.
+    </pre>
+</p>
+
+    <h5 id="Materials Used">MaterialsUsed</h5>
+<p class="ex5">
+    <pre>
+        The tl line speaker insides normally consist of a folded pathway which incorporates dampening or absorbent material this 
+        is used to remove unwanted resonances which would interfere otherwise with the produced sound (Newell Philip Richard, 
+        Holland Keith. 2007). Absorbent materials such as long wool are used, as these are good at reducing the energy of medium
+        to high-frequency sound waves. Furthermore, the padding used must reduce reflections inside the cabinet and the design of
+        the pathway further helps this by incorporating tapered walls and reflectors at 45 degrees (Hessam Alavi, 2016). This means
+        that the sound produced at the exit of the labyrinth is the wanted low frequencies. The tl lines work as acoustic waveguides
+        where the length of the pathway is calculated based on factors of the speaker itself. The tl line works as an acoustic 
+        waveguide making sure the sound waves released at the open end are in phase with the sound waves produced by the front 
+        side of the speaker.
     </pre>
 </p>
 </body>
