--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
         <tr>
             <td><a href="#Materials Used">MaterialsUsed</a></td>
         </tr>
+         <tr>
+            <td><a href="#The Design Of the Transmission Line Speakers">TheDesignOfTransmissionLineSpeakers</a></td>
+        </tr>
+         <tr>
+            <td><a href="#Materials Used">MaterialsUsed</a></td>
+        </tr>
     </table>
 
     <hr>
@@ -148,6 +154,24 @@
         where the length of the pathway is calculated based on factors of the speaker itself. The tl line works as an acoustic 
         waveguide making sure the sound waves released at the open end are in phase with the sound waves produced by the front 
         side of the speaker.
+    </pre>
+</p>
+    <figure>
+    <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 1000px;">
+    <figcaption>Figure 1: the transmission of waves through a waveguide. Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.
+    </figcaption>
+    </figure>
+        <h6 id="MThe Design Of the Transmission Line Speakers">TheDesignOftheTransmissionLineSpeakers</h6>
+<p class="ex6">
+    <pre>
+        The length of the transmission line is calculated based on resonance. This means the length is set to the fundamental frequency
+        of the loudspeaker, designers will normally use a length which is 1/2y of that. This is because the sound produced out the
+        rear side of the speaker is exactly 180 degrees out of phase therefore a completely destructive wave to the outputted sound. As the
+        tl shifts the wave 180 degrees back it is now completely in phase. Now that it’s in phase and tuned to the fundamental frequency
+        there is an increase in resonance of wanted frequencies increasing the output level of our wanted bass. This is like someone on
+        a swing, to make the swing move higher (increase the amplitude) you need to swing your legs at the right speed/ frequency, in
+        other words, the fundamental frequency of that system. Otherwise, you find yourself not increasing your height or by swinging out
+        of phase (e.g. legs out whilst going backwards) you reduce your height. This is the same as transmission line speakers. 
     </pre>
 </p>
 </body>
