--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
     </pre>
 </p>
     <figure>
-    <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 1000px;">
-    <figcaption>Figure 1: the transmission of waves through a waveguide. Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.
+    <img src="soundabsorbtion.png" alt="Sound Absorbtion" style="max-width: 100%; height: auto; width: 1000px;">
+    <figcaption>Figure 2: this figure shows how the size of cells in a polymer matrix affects sound absorption. 
+        Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.
     </figcaption>
     </figure>
         <h6 id="MThe Design Of the Transmission Line Speakers">TheDesignOftheTransmissionLineSpeakers</h6>
