--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     </pre>
 </p>
     <figure>
-    <img src="soundabsorbtion.png" alt="Sound Absorbtion" style="max-width: 100%; height: auto; width: 1000px;">
-    <figcaption>Figure 2: this figure shows how the size of cells in a polymer matrix affects sound absorption. 
+    <img src="soundabsorbtion2.png" alt="Sound Absorbtion" style="max-width: 100%; height: auto; width: 1000px;">
+    <figcaption>Figure 2: This figure shows how the size of cells in a polymer matrix affects sound absorption. 
         Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.
     </figcaption>
     </figure>
