--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
             <td><a href="#Materials Used">MaterialsUsed</a></td>
         </tr>
          <tr>
-            <td><a href="#The Design Of the Transmission Line Speakers">TheDesignOfTransmissionLineSpeakers</a></td>
+            <td><a href="#The Design Of the Transmission Line Speakers">The Design Of Transmission Line Speakers</a></td>
         </tr>
          <tr>
-            <td><a href="#Materials Used">MaterialsUsed</a></td>
+            <td><a href="#Materials Used">Materials Used</a></td>
+        </tr>
+        <tr>
+            <td><a href="#Analysis">Analysis</a></td>
         </tr>
     </table>
 
@@ -132,7 +135,7 @@
             converted into sound.
         </pre>
     </p>
-<h4 id="Extended Bass Response">ExtendedBassResponse</h4>
+<h4 id="Extended Bass Response">Extended Bass Response</h4>
 <p class="ex4">
     <pre>
         The idea of this design is that a normal bass driver/ speaker can produce frequencies which before would have been covered
@@ -142,7 +145,7 @@
     </pre>
 </p>
 
-    <h5 id="Materials Used">MaterialsUsed</h5>
+    <h5 id="Materials Used">Materials Used</h5>
 <p class="ex5">
     <pre>
         The tl line speaker insides normally consist of a folded pathway which incorporates dampening or absorbent material this 
@@ -162,7 +165,7 @@
         Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.
     </figcaption>
     </figure>
-        <h6 id="MThe Design Of the Transmission Line Speakers">TheDesignOftheTransmissionLineSpeakers</h6>
+        <h6 id="The Design Of the Transmission Line Speakers">The Design Of the Transmission Line Speakers</h6>
 <p class="ex6">
     <pre>
         The length of the transmission line is calculated based on resonance. This means the length is set to the fundamental frequency
@@ -173,6 +176,14 @@
         a swing, to make the swing move higher (increase the amplitude) you need to swing your legs at the right speed/ frequency, in
         other words, the fundamental frequency of that system. Otherwise, you find yourself not increasing your height or by swinging out
         of phase (e.g. legs out whilst going backwards) you reduce your height. This is the same as transmission line speakers. 
+    </pre>
+</p>
+            <h7 id="Analysis">Analysis</h7>
+<p class="ex7">
+    <pre>
+        To compare the difference between the transmission line and normal ported or enclosed speaker designs we use something called frequency 
+        responsiveness which is the amplitude in decibels (dB) for a given frequency (Newell Philip Richard, Holland Keith. 2007). Here I will
+        show the difference between types of speakers and the difference between the port of the TL and the driver.
     </pre>
 </p>
 </body>
