--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             height: auto;
         }
 
-        h1, h2, h3 {
+        h1, h2, h3, h4, h5, h6, h7 {
             margin-bottom: 5px; /* Adjusted heading margins for better spacing */
         }
     </style>
@@ -66,7 +66,7 @@
     <h1><b>ENG0018 Computer laboratory 2023/24 </b></h1>
     <h2>Student URN 123456789</h2>
     <hr>
-    <h2 style="font-family: calibri;"><b>Conference paper: Bridge Deck Repairs</b></h2>
+    <h2 style="font-family: calibri;"><b>Conference paper: What are transmission line speakers and are they better?</b></h2>
     <hr>
 
     <!-- Table of contents -->
@@ -185,6 +185,12 @@
         responsiveness which is the amplitude in decibels (dB) for a given frequency (Newell Philip Richard, Holland Keith. 2007). Here I will
         show the difference between types of speakers and the difference between the port of the TL and the driver.
     </pre>
+     <figure>
+    <img src="TL_measurement.jpg" alt="Tl measurement" style="max-width: 100%; height: auto; width: 1000px;">
+    <figcaption>Figure 2: This figure shows how the size of cells in a polymer matrix affects sound absorption. 
+        Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.
+    </figcaption>
+    </figure>
 </p>
 </body>
 </html>
