--- a/index.html
+++ b/index.html
@@ -187,11 +187,18 @@
     </pre>
      <figure>
     <img src="TL_measurement.jpg" alt="Tl measurement" style="max-width: 100%; height: auto; width: 700px;">
-    <figcaption>Figure 2: This figure shows how the size of cells in a polymer matrix affects sound absorption. 
-        Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.
+    <figcaption>Figure 3: this diagram shows the sound frequency at the port (solid line) and the driver (dotted) Newell Philip Richard, 
+        Holland Keith.2007
     </figcaption>
     </figure>
+        <pre>
+        The diagram shows us how at the left side of the graph towards the 10 hz the solid line or the port the dB for these frequencies
+        is higher (this being the bass frequencies). Whilst on the right side of the graph the dotted line has a better frequency response,
+        this is what we expect because of the dampening material used inside the pathway to reduce the higher frequencies as this produces
+        those unwanted resonances which make the sound muddy.
+    </pre>
 </p>
+    
 </body>
 </html>
     
