--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         <tr>
             <td><a href="#Analysis">Analysis</a></td>
         </tr>
+        <tr>
+            <td><a href="#Conclusion">Conclusion</a></td>
+        </tr>
     </table>
 
     <hr>
@@ -193,11 +196,22 @@
     </figure>
         <pre>
         The diagram shows us how at the left side of the graph towards the 10 hz the solid line or the port the dB for these frequencies
-        is higher (this being the bass frequencies). Whilst on the right side of the graph the dotted line has a better frequency response,
+        is higher (this being the bass frequencies). On the right side of the graph the dotted line has a better frequency response,
         this is what we expect because of the dampening material used inside the pathway to reduce the higher frequencies as this produces
         those unwanted resonances which make the sound muddy.
     </pre>
 </p>
+
+                <h8 id="Analysis">Analysis</h8>
+<p class="ex8">
+    <pre>
+        Whilst transmission line speakers are shown to perform better than normal ported speakers this is at the cost of a complex design
+        process which can have expensive R&D therefore leading to increased costs for the consumer. Therefore, most producers focus on
+        the quality of the driver and consumers will purchase sub-woofers ( a speaker with a large diaphragm driver specifically for bass 
+        frequencies) for their sound system to get those sub-infrasonic and immersive bass frequencies. However transmission line
+        speakers offer the whole package in one, many TL speakers include multiple drivers (bass, mid and tweeters) and achieve the sub-infrasonic
+        and deep bass frequencies with the transmission line making them superior but at a higher cost. 
+    </pre>
     
 </body>
 </html>
