--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
     </figure>
         <pre>
         The diagram shows us how at the left side of the graph towards the 10 hz the solid line or the port the dB for these frequencies
-        is higher (this being the bass frequencies). On the right side of the graph the dotted line has a better frequency response,
+        is higher (this being the bass frequencies). On the right side of the graph, the dotted line has a better frequency response,
         this is what we expect because of the dampening material used inside the pathway to reduce the higher frequencies as this produces
         those unwanted resonances which make the sound muddy.
     </pre>
 </p>
 
-                <h8 id="Analysis">Analysis</h8>
+                <h8 id="Conclusion">Conclusion</h8>
 <p class="ex8">
     <pre>
         Whilst transmission line speakers are shown to perform better than normal ported speakers this is at the cost of a complex design
