--- a/index.html
+++ b/index.html
@@ -214,6 +214,42 @@
     </pre>
 
     </p>
+
+                    <h9 id="References">References</h9>
+<p class="ex9">
+    <pre>
+        List of references 	
+Authors: Colloms Martin, Darlington Paul.
+Year of publication: 2005
+Title: <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">High performance loudspeakers</a>
+Edition: 6th 
+Publisher: Chichester: Wiley	
+Martin, C. Paul, D. (2005) High performance loudspeakers. 6th edition. Chichester: wiley. 
+
+
+Authors: Newell Philip Richard, Holland Keith.
+Year of publication: 2007
+Title: Loudspeakers: for music recording and reproduction
+Edition: 1st 
+Publisher: Amsterdam: London: Elsevier Focal 
+ Philip, N. Holland, K. (2007) Loudspeakers: for music recording and reproduction. 1st edition. Amsterdam, London: Elsevier Focal.
+
+Title: Testing loudspeakers
+Creator: D'Appolito, Joseph A. 
+Subject Loudspeakers -- Testing
+Publisher: Peterborough, N.H. : Audio Amateur
+Creation Date: 1998
+D’Appolito, J. (1998) Testing loudspeakers. 1st edition. Peterborough: Audio amateur
+
+Title: ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS
+Creator: Hessam Alavi 
+Publisher: Southampton: University of Southampton 
+Creation date: 2016
+Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1st edition. Southampton: University of Southampton.
+ 
+    </pre>
+        
+    </p>
     
 </body>
 </html>
