--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1
     
    <script>
     // array of slide images
-    var slideimages = ["TL_measurement.jpg", "TL_measurement.jpg"];
+    var slideimages = ["TL_measurement.jpg", "soundabsorbtion2.png"];
     var currentslide = 0;
 
     function showslide() {
