--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1
         
 
     <div id ="slide-container">
-        <img id="slide" src="TL_measurement.jpg" alt="TL_measurement.jpg" style="width:100%; max-width: 1000px">
+        <img id="slide" src="TL_measurement.jpg" alt="slide 1" style="width:100%; max-width: 1000px">
 
         <div class="button"-container">
             <button class="button" onclick="prevslide()">previous</button>
