--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1
     
    <script>
     // array of slide images
-    var slideimages = ["TL_measurement.jpg", "soundabsorbtion2.png"];
+    var slideimages = ["Slide1.png", "Slide2.png", "Slide3.png", "Slide4.png", "Slide5.png];
     var currentslide = 0;
 
     function showslide() {
@@ -295,7 +295,7 @@ Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1
     <h9> Conference presentation: How do transmission line speakers work </h9>
 
     <div id="slide-container">
-        <img id="slide" src="TL_measurement.jpg" alt="slide 1" style="width:100%; max-width: 1000px">
+        <img id="slide" src="Slide1.png" alt="slide 1" style="width:100%; max-width: 1000px">
 
         <div class="button-container">
             <button class="button" onclick="prevslide()">previous</button>
