--- a/index.html
+++ b/index.html
@@ -305,6 +305,10 @@ Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1
         <div class="slide-number-container">
             <button class="button" onclick="showslidenumber(1)">1</button>
             <button class="button" onclick="showslidenumber(2)">2</button>
+            <button class="button" onclick="showslidenumber(3)">1</button>
+            <button class="button" onclick="showslidenumber(4)">2</button>
+            <button class="button" onclick="showslidenumber(5)">1</button>
+          
         </div>
 
     </div>
