--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1
     
    <script>
     // array of slide images
-    var slideimages = ["Slide1.png", "Slide2.png", "Slide3.png", "Slide4.png", "Slide5.png];
+    var slideimages = ["Slide1.png", "Slide2.png", "Slide3.png", "Slide4.png", "Slide5.png"];
     var currentslide = 0;
 
     function showslide() {
