--- a/index.html
+++ b/index.html
@@ -244,11 +244,17 @@ Publisher: Peterborough, N.H. : Audio Amateur
 Creation Date: 1998
 D’Appolito, J. (1998) Testing loudspeakers. 1st edition. Peterborough: Audio amateur
 
-Title: ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS
+Title: <a href="https://www.semanticscholar.org/paper/High-end-3-way-speakers-based-on-transmission-line-Natkaniec/210e172b78ff7a39906bc9399be4e2e98035c7c7">ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS</a>
 Creator: Hessam Alavi 
 Publisher: Southampton: University of Southampton 
 Creation date: 2016
 Alavi, H. (2016) ACOUSTICS OF HIGH PERFORMANCE TRANSMISSION-LINE LOUDSPEAKERS. 1st edition. Southampton: University of Southampton.
+
+Title: <a href="https://link.springer.com/chapter/10.1007/978-3-030-88213-6_8 "> Acousic wave guides</a>
+Creator: H Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos
+Publisher: Springer, cham 
+Creation date: 2022
+
  
     </pre>
         
