--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
         h1, h2, h3, h4, h5, h6, h7 {
             margin-bottom: 5px; /* Adjusted heading margins for better spacing */
         }
+        /* Style for table of contents links */
+table a {
+    color: blue; /* Set the color to blue */
+    text-decoration: none;
+}
+
+table a:hover {
+    text-decoration: underline;
+}
     </style>
 </head>
 <body style="background-color: #FFFFFF;">
