--- a/index.html
+++ b/index.html
@@ -58,15 +58,6 @@
             margin-bottom: 5px; /* Adjusted heading margins for better spacing */
         }
         /* Style for table of contents links */
-table a {
-    color: blue; /* Set the color to blue */
-    text-decoration: none;
-}
-
-table a:hover {
-    text-decoration: underline;
-}
-    </style>
 </head>
 <body style="background-color: #FFFFFF;">
 
@@ -229,6 +220,17 @@ table a:hover {
 
                     <h9 id="References">References</h9>
 <p class="ex9">
+        <style>
+        /* Style for table of contents links */
+table a {
+    color: blue; /* Set the color to blue */
+    text-decoration: none;
+}
+
+table a:hover {
+    text-decoration: underline;
+}
+        
     <pre>
         List of references 	
 Authors: Colloms Martin, Darlington Paul.
@@ -241,12 +243,12 @@ Martin, C. Paul, D. (2005) High performance loudspeakers. 6th edition. Chicheste
 
 Authors: Newell Philip Richard, Holland Keith.
 Year of publication: 2007
-Title: Loudspeakers: for music recording and reproduction
+Title: <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">Loudspeakers: for music recording and reproduction</a>
 Edition: 1st 
 Publisher: Amsterdam: London: Elsevier Focal 
  Philip, N. Holland, K. (2007) Loudspeakers: for music recording and reproduction. 1st edition. Amsterdam, London: Elsevier Focal.
 
-Title: Testing loudspeakers
+Title: <a href="https://audioxpress.com/assets/upload/files/dappolito2959.pdf">Testing loudspeakers</a>
 Creator: D'Appolito, Joseph A. 
 Subject Loudspeakers -- Testing
 Publisher: Peterborough, N.H. : Audio Amateur
